# zero-knowledge-proof

./: Cargo.toml  README.md  build.rs
proto/: zkp_auth.proto
src/: client.rs  lib.rs  main.rs  server.rs  zkp_auth.rs
