[package]
name = "ZKP"
version = "0.1.0"
edition = "2024"

[dependencies]
num-bigint = { version = "0.4.6", features = ["rand"] }
rand = "0.8"
tonic = "0.13.1"
prost = "0.13"
tokio = { version = "1.46.1", features = [
    "macros",
    "rt-multi-thread",
] } # async rust runtime
hex = "0.4.3"

[build-dependencies]
tonic-build = "0.13.1"


[[bin]]
name = "server"
path = "./src/server.rs"

[[bin]]
name = "client"
path = "./src/client.rs"
